Add update articles for blocks

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,6 +27,9 @@
           <div class="col-md-6">
             <%= f.input :name, input_html: {class: 'form-control'}  %>
             <%= f.input :price_cost,  as: :string, input_html:{class: 'form-control'} %>
+            <% if !@article.versions.nil? %>
+              <em>Ultima Actualización: <%= find_article_last_version @article %></em>
+            <% end %>
             <%= f.input :percentaje, as: :string, input_html: {class: 'form-control', value: f.object.percentaje || '0' } %>
             <%= f.input :iva, as: :string, input_html: {class: 'form-control'} %>
             <%= f.input :price_total ,as: :string, input_html: {class: 'form-control'}, readonly: true  %>
