--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -13,6 +13,7 @@
   <div  class="col-xs-12 col-sm-2 col-md-2">
 
     <%= f.input :quantity_stock, as: :hidden, label: false  %>
+    <%= f.input :price_cost, as: :hidden, label: false  %>
     <%= f.input :allow_negative, as: :hidden,  label: false  %>
     <% if params[:action] == 'new' || params[:action] =='create'  %>
       <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity", value: 1}  %>
