--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -17,7 +17,16 @@
       <% if current_user.role == 'admin' %>
       <li><%= link_to "Clientes", customers_path %></li>
     <% end %>
-    <li><%= link_to "Articulos", articles_path %></li>
+    <li  class="dropdown">
+      <%= link_to "Articulos", "#", class:"dropdown-toggle", "data-toggle":"dropdown"%> 
+
+      <ul class="dropdown-menu">
+        <li><%= link_to "Articulos", articles_path %></li>
+        <li><%= link_to "Acciones en lotes", update_process_articles_path %></li>
+      </ul>
+
+    
+    </li>
     <%  if current_user.role == 'admin' %>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuracion<span class="caret"></span></a>
