--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -18,7 +18,7 @@
       <li><%= link_to "Clientes", customers_path %></li>
     <% end %>
     <li  class="dropdown">
-      <%= link_to "Articulos", "#", class:"dropdown-toggle", "data-toggle":"dropdown"%> 
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Articulos<span class="caret"></span></a>
 
       <ul class="dropdown-menu">
         <li><%= link_to "Articulos", articles_path %></li>
